--- a/src/scss/_ressponsive.scss
+++ b/src/scss/_ressponsive.scss
@@ -60,6 +60,7 @@
         align-items: center;
         flex-direction: column;
         // gap: 1rem;
+        margin-top: 2rem;
         padding: 0 2rem;
         justify-content: center;
 
